; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_defer_timer_init.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-python.c_defer_timer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.python_obs_callback = type { i32 }
%struct.python_obs_timer = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @defer_timer_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @defer_timer_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.python_obs_callback*, align 8
  %4 = alloca %struct.python_obs_timer*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.python_obs_callback*
  store %struct.python_obs_callback* %6, %struct.python_obs_callback** %3, align 8
  %7 = load %struct.python_obs_callback*, %struct.python_obs_callback** %3, align 8
  %8 = call %struct.python_obs_timer* @python_obs_callback_extra_data(%struct.python_obs_callback* %7)
  store %struct.python_obs_timer* %8, %struct.python_obs_timer** %4, align 8
  %9 = load %struct.python_obs_timer*, %struct.python_obs_timer** %4, align 8
  %10 = call i32 @python_obs_timer_init(%struct.python_obs_timer* %9)
  ret void
}

declare dso_local %struct.python_obs_timer* @python_obs_callback_extra_data(%struct.python_obs_callback*) #1

declare dso_local i32 @python_obs_timer_init(%struct.python_obs_timer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
